--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -8,7 +8,7 @@ applications:
             - npm install
         build:
           commands:
-            - npm run build && npm run export
+            - npm run build
       artifacts:
         baseDirectory: out
         files:
