--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -9,6 +9,7 @@ applications:
         build:
           commands:
             - npm run build
+            - npm run export
       artifacts:
         baseDirectory: out
         files:
