--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -9,12 +9,12 @@ applications:
         build:
           commands:
             - npm run build
-            - npm run export
       artifacts:
-        baseDirectory: out
+        baseDirectory: .next
         files:
           - '**/*'
       cache:
         paths:
-          - 'node_modules/**/*'
-          - '.next/**/*'
+          - .next/cache/**/*
+          - .npm/**/*
+          - node_modules/**/*
