--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -1,20 +1,17 @@
 version: 1
-applications:
-  - appRoot: frontend
-    frontend:
-      phases:
-        preBuild:
-          commands:
-            - npm install
-        build:
-          commands:
-            - npm run build
-      artifacts:
-        baseDirectory: .next
-        files:
-          - '**/*'
-      cache:
-        paths:
-          - .next/cache/**/*
-          - .npm/**/*
-          - node_modules/**/*
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - npm ci
+    build:
+      commands:
+        - npm run build
+        - npm run export  # Export static content to the 'out' directory
+  artifacts:
+    baseDirectory: out   # Ensure the 'out' directory is used for static files
+    files:
+      - '**/*'            # Include all files in the 'out' directory
+  cache:
+    paths:
+      - node_modules/**/*
